# python-monorepo

./: Makefile  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
services/demo/: pyproject.toml
services/demo/demo/: hello.py
