[tool.poetry]
name = "python-monorepo"
description = "Monorepo for Python projects"
license = "MIT"
version = "0.1.0"
authors = ["evgenymarkov <evgenymarkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8-absolute-import = "1.0"
flake8-bandit = "2.1.2"
flake8-broken-line = "0.3.0"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.3.1"
flake8-eradicate = "1.0.0"
flake8-isort = "4.0.0"
flake8-print = "4.0.0"
flake8-pytest-style = "1.3.0"
flake8-tidy-imports = "4.2.1"
flakehell = "0.7.1"
isort = "5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = "38"
multi_line_output = 3

[tool.flakehell]
format = "default"
show_source = true
exclude = [".git", ".venv", "__pycache__"]

[tool.flakehell.plugins]
flake8-absolute-import = ["+*"]
flake8-bandit = ["+*"]
flake8-broken-line = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-print = ["+*"]
flake8-pytest-style = ["+*"]
flake8-tidy-imports = ["+*"]
pyflakes = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-*"]

[tool.flakehell.exceptions."**/test_*.py"]
flake8-bandit = ["-*"]
