[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo project"
authors = ["evgenymarkov <evgenymarkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
pytest = "6.2.1"
pytest-cov = "2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".venv/*", "tests/*"]
